# aivk-module-sample

./: .gitignore  CHANGELOG.MD  README.md  config.toml  meta.toml  moduleID.py  pyproject.toml  sample_module_id.py  update.json
.github/scripts/: initialize_module.py  package_module.py
.github/workflows/: cleanup-workflows.yml  initialize-module.yml  package-release.yml
aivk_module_sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aivk_module_sample/: meta.toml
src/aivk_module_sample/cli/: README.MD  sample_module_id.py
src/moduleID/: meta.toml  moduleID.py
